# ESP32-RevK

./: CMakeLists.txt  Kconfig  README.md  buildsuffix  jo.c  led.c  partitions_8m-c5.csv  revk-user.md  revk.c  revk_settings.c  setbuildsuffix  settings.def  settings_lib.c
Manuals/: revk-dev.md  revk-settings.md  revk-user.md
include/: led.h  revk.h
